tests/snapshots/shell__unfinished_prefix.snap
---
source: tests/shell.rs
expression: stdout
---
Error: unexpected token: rparen, expected valid expression
   ╭─[unfinished_prefix.tmp:1:9]
   │
 1 │ echo .(!)
   │         ┬  
   │         ╰── error happened here
───╯

